Add EJS file with improved contact panel formatting

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -151,7 +151,7 @@
         </div>
         <form id="chat-form" class="hidden p-4 bg-black border-t border-gray-800 flex">
             <input type="text" id="message" placeholder="Ask NexAI..." required class="flex-1 bg-black rounded-lg text-white placeholder-gray-500 p-3 mr-2">
-            <button type="submit" class="bg-gray-600 hover:bg-gray-700 text-white rounded-lg px-4">Send</button>
+            <button type="submit" class="bg-gray-600 hover:bg-gray-700 text-white rounded-lg px-4">➤</button>
         </form>
     </div>
 
